--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,12 +4,12 @@ body{
 	font-family: 'Open Sans', sans-serif;
 	font-size: 0.9em;
 	font-weight: 200;
-	background: #FFF url('../images/airport.jpg') no-repeat center fixed;
+	background: #FFF url('http://localhost:3000/images/airport.jpg') no-repeat center fixed;
 	height: auto;
 }
 
 .top{
-	background:url('../images/media.jpg') no-repeat center fixed;
+	background:url('http://localhost:3000/images/media.jpg') no-repeat center fixed;
 	width: 100%;
 	height: 600px;
 	-webkit-background-size: cover;
@@ -357,7 +357,7 @@ footer{
 	}
 
 	.search-container{
-		background:url('../images/media.jpg') no-repeat center center fixed;
+		background:url('http://localhost:3000/images/media.jpg') no-repeat center center fixed;
 		width:85%;
 		height: auto;
 		-webkit-background-size: cover;
@@ -619,7 +619,7 @@ footer{
 	}
 
 	.search-container{
-		background:url('../images/media.jpg') no-repeat center center fixed;
+		background:url('http://localhost:3000/images/media.jpg') no-repeat center center fixed;
 		width:85%;
 		height: auto;
 		-webkit-background-size: cover;
